pipeline for building the NCCs for a star now abstracted, if a bit ugly

--- a/examples/massive_star_zams_15msol/controls.cfg
+++ b/examples/massive_star_zams_15msol/controls.cfg
@@ -4,7 +4,7 @@
     path = zams_15Msol/LOGS/profile47.data
 
     #basis boundaries
-    r_bounds = 0, 1.1L, 1.5L
+    r_bounds = 0, 1.1L, 0.5R
     
     #radial resolution(s) -> length = len(r_bounds) - 1
     nr = 64, 16
