--- a/examples/massive_star_zams_15msol/ncc_specs.cfg
+++ b/examples/massive_star_zams_15msol/ncc_specs.cfg
@@ -58,9 +58,12 @@
     grid_only = False 
     nr_max = 10, 16
     nr_post = 60, 16
+    transition_point = 1.05
+    width = 0.05
     
 [grad_chi_rad]
 
     vector = True
     grid_only = False 
+    nr_post = 1, 32
 
