IVP now works in new directory structure

--- a/examples/massive_star_zams_15msol/controls.cfg
+++ b/examples/massive_star_zams_15msol/controls.cfg
@@ -31,3 +31,18 @@
     
     #highest spherical harmonic degree to solve EVP at
     Lmax = 1
+
+[dynamics]
+
+    ntheta = 64
+    safety = 0.2
+
+    CFL_max_r = 1.05
+
+    wall_hours = 23.5
+    buoy_end_time = 40
+    sponge = True
+    tau_factor = 1
+
+    A0 = 1e-6
+
