eigenvalue pipeline works again

--- a/examples/massive_star_zams_15msol/controls.cfg
+++ b/examples/massive_star_zams_15msol/controls.cfg
@@ -5,17 +5,19 @@
 
     #basis boundaries
     r_bounds = 0, 1.1L, 0.5R
+    #Only works with L if you have core convection zone; how to generalize that?
     
     #radial resolution(s) -> length = len(r_bounds) - 1
-    nr = 64, 32
+    nr = 32, 32
 
     #options for building the star
     smooth_h = True
 
 [numerics]
 
+    #Want to put in a tag that says use AN_HD equations or something
     #Target reynolds number of simulation; higher needs more resolution
-    reynolds_target = 1e3
+    reynolds_target = 4e3
 
     prandtl = 1
 
