removes flux-> luminosity operator pipeline; makes luminosity defined outputs. This was crashing with multiple bases

--- a/massive_stars/re4e3_waves/outputs.cfg
+++ b/massive_stars/re4e3_waves/outputs.cfg
@@ -90,24 +90,15 @@
     even_outputs = False
 
 [tasks-06]
-    #hi-cadence shell outputs
     handler = profiles
     type = s2_avg
 
-    # Wave flux sims
     field01 = s1
-
-[tasks-07]
-    #hi-cadence shell outputs
-    handler = profiles
-    type = luminosity
-
-    # Wave flux sims
-    field01 = wave_flux_r
-    field02 = enth_flux_r
-    field03 = visc_flux_r
-    field04 = cond_flux_r
-    field05 = KE_flux_r
+    field02 = enth_lum_r
+    field03 = visc_lum_r
+    field04 = cond_lum_r
+    field05 = KE_lum_r
+    field06 = wave_lum_r
 
 
 [checkpoint]
