improvements to wave-flux post

--- a/massive_stars/re4e3_damping/outputs.cfg
+++ b/massive_stars/re4e3_damping/outputs.cfg
@@ -44,7 +44,7 @@
 [handler-shells]
 
     name = shells
-    max_writes = 20
+    max_writes = 100
     time_unit = kepler
     dt_factor = 1
     even_outputs = True
@@ -64,7 +64,9 @@
 
     interp01 = 1.1
     interp02 = 1.5
-    interp03 = 0.95R
+    interp03 = 1.75
+    interp04 = 2.0
+    interp05 = 0.95R
     
 
 [handler-scalars]
