--- a/massive_stars/gyre/my_star/gyre_ell01-05.in
+++ b/massive_stars/gyre/my_star/gyre_ell01-05.in
@@ -46,8 +46,8 @@
 /
 
 &num
-!  diff_scheme = 'MAGNUS_GL2' 
-  diff_scheme = 'COLLOC_GL2' 
+  diff_scheme = 'MAGNUS_GL2' 
+!  diff_scheme = 'COLLOC_GL2' 
   n_iter_max = 200
 /
 
